--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,13 @@
 name = "dco3"
 version = "0.1.0"
 edition = "2021"
+authors = ["Octavio Simone"]
+repository = "https://github.com/unbekanntes-pferd/dco3"
+homepage = "https://github.com/unbekanntes-pferd/dco3"
+license = "MIT"
+readme = "README.md"
+keywords = ["dracoon", "api-client", "rust-sdk"]
+description = "Async API wrapper for DRACOON in Rust."
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
