--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,8 @@ description = "Async API wrapper for DRACOON in Rust."
 [dependencies]
 # HTTP client
 reqwest = {version = "0.11.14", features = ["json", "stream"]}
+reqwest-middleware = "0.2.2"
+reqwest-retry = "0.2.2"
 
 # crypto 
 dco3_crypto = "0.5.0"
@@ -35,6 +37,7 @@ serde_json = "1.0.95"
 
 # error handling
 thiserror = "1.0.2"
+retry-policies = "0.1.0"
 
 # logging and tracing
 tracing = "0.1.37"
