--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ description = "Async API wrapper for DRACOON in Rust."
 # HTTP client
 reqwest = {version = "0.11.18", features = ["json", "stream"]}
 reqwest-middleware = "0.2.2"
-reqwest-retry = "0.2.2"
+reqwest-retry = "0.3.0"
 
 # crypto 
 dco3_crypto = "0.5.1"
@@ -46,6 +46,7 @@ tracing = "0.1.37"
 url = "2.4.0"
 base64 = "0.21.2"
 chrono = "0.4.26"
+dco3_derive = { path = "dco3_derive" }
 
 
 [dev-dependencies]
