update meta info on derive

--- a/dco3_derive/Cargo.toml
+++ b/dco3_derive/Cargo.toml
@@ -2,6 +2,13 @@
 name = "dco3_derive"
 version = "0.1.0"
 edition = "2021"
+authors = ["Octavio Simone"]
+repository = "https://github.com/unbekanntes-pferd/dco3/dco3_derive"
+homepage = "https://github.com/unbekanntes-pferd/dco3/dco3_derive"
+license = "MIT"
+readme = "README.md"
+keywords = ["derive", "macro", "rust-sdk", "dracoon"]
+description = "Derive macro for DRACOON API models parsed from a response."
 
 [lib]
 proc-macro = true
