--- a/Cargo.toml
+++ b/Cargo.toml
@@ -45,7 +45,7 @@ tracing = "0.1.40"
 # utils
 url = "2.5.0"
 base64 = "0.22.0"
-chrono = "0.4.35"
+chrono = {version = "0.4.35", features = ["serde"]}
 dco3_derive = { path = "dco3_derive", version = "0.1.0"}
 
 
