--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,14 +1,11 @@
 name: Rust
-
 on:
   push:
     branches: [ "*" ]
   pull_request:
     branches: [ "master" ]
-
 env:
   CARGO_TERM_COLOR: always
-
 jobs:
   build:
     environment:
@@ -16,9 +13,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
-    - name: Build
+    - name: build
       run: cargo build --verbose
-    - name: Lint (clippy)
+    - name: lint (clippy)
       run: cargo clippy -- -D warnings
-    - name: Run tests
+    - name: format
+      run: cargo fmt -- --check
+    - name: tests
       run: cargo test --verbose
