--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "dco3"
-version = "0.9.2"
+version = "0.10.0"
 edition = "2021"
 authors = ["Octavio Simone"]
 repository = "https://github.com/unbekanntes-pferd/dco3"
@@ -14,10 +14,9 @@ description = "Async API wrapper for DRACOON in Rust."
 
 
 [dependencies]
-# HTTP client (currently pinned at 0.11.27 due to reqwest-retry and reqwest-middleware)
-reqwest = {version = "0.11.27", features = ["json", "stream"]}
-reqwest-middleware = "0.2.5"
-reqwest-retry = "0.4.0"
+reqwest = {version = "0.12.3", features = ["json", "stream"]}
+reqwest-middleware = {version = "0.3.0", features = ["json"]}
+reqwest-retry = "0.5.0"
 
 # crypto 
 dco3_crypto = "0.6.0"
