feat(eventlog): add audit permissions endpoint (as deprecated for cloud)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -50,4 +50,5 @@ dco3_derive = { path = "dco3_derive", version = "0.1.0"}
 
 [dev-dependencies]
 mockito = "1.4.0"
+tracing-subscriber = {version = "0.3", features = ["env-filter"]}
 
