--- a/Cargo.toml
+++ b/Cargo.toml
@@ -46,8 +46,8 @@ tracing = "0.1"
 url = "2"
 base64 = "0.22"
 chrono = {version = "0.4", features = ["serde"]}
-dco3_derive = { path = "dco3_derive", version = "0.1.0"}
-secrecy = "0.8"
+dco3_derive = { path = "dco3_derive", version = "0.2.0"}
+secrecy = {version = "0.8", features = ["serde"]}
 
 
 [dev-dependencies]
