--- a/Cargo.toml
+++ b/Cargo.toml
@@ -54,4 +54,4 @@ secrecy = {version = "0.10", features = ["serde"]}
 [dev-dependencies]
 mockito = "1"
 tracing-subscriber = {version = "0.3.20", features = ["env-filter"]}
-
+http = "1.3"
